--- a/EduCodar projetos/css/style_index.css
+++ b/EduCodar projetos/css/style_index.css
@@ -21,14 +21,15 @@
     list-style: none;
     display: inline;
     padding-right: 60px;
-    padding-left: 20px;
+    padding-left: 60px;
     font-size: 15pt;
 }
 .logo{
-    width: 600px;
-    height: 600px;
-    padding: 0px 0px 50px 0px;
+    display: flex;
+    align-content: center;
+    margin-top: 70px;
 }
+
 .content{
     margin: 200px 0px 0px 0px;
     height: 200px;
