--- a/EduCodar projetos/css/style_index.css
+++ b/EduCodar projetos/css/style_index.css
@@ -6,16 +6,21 @@
 /* PAGE CSS */
 .layout{
     width: auto;
+    height: 1020px;
     background-color: #000978;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 .menu{
     height: 80px;
     color: azure;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    font-family: Verdana;
+    font-variant: small-caps;
 }
 .ul li{
     list-style: none;
@@ -27,10 +32,87 @@
 .logo{
     display: flex;
     align-content: center;
-    margin-top: 70px;
+    margin-top: 100px;
+
 }
 
-.content{
-    margin: 200px 0px 0px 0px;
-    height: 200px;
+.text{
+    display: flex;
+    align-content: center;
+    width: auto;
+    height: 1020px;
+    color: #757575;
+    font-size: 40px ;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    line-height: 2.5;
+
+}
+
+.paragrafo{
+    margin: 200px;
+}
+
+.container-cartao{
+    width: auto;
+    height: auto;
+    justify-content: space-evenly;
+}
+.cartao{ 
+    background-color: #f5f5f5;
+    display: flex;
+    height: 800px;
+    align-items: center;
+}
+
+.cartao-text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    text-align: justify;
+    line-height: 1.8;
+    color: #757575;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+.container-cartao div:nth-child(2){
+    background-color: white;
+}
+
+.imgcard{
+    height: 450px;
+    width: auto;
+}
+
+.botao{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.botao input {
+    width: 190px;
+    height: 45px;
+    cursor: pointer;
+
+}
+
+.banner{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.imgsize{
+    height: 645px;
+    width: 645px;
+}
+
+.banner-text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 27px;
+    text-align: center;
+    line-height: 1.8;
+    color: #757575;
+    margin: 0px 5vh;
+
 }
