--- a/EduCodar projetos/css/style_index.css
+++ b/EduCodar projetos/css/style_index.css
@@ -50,7 +50,7 @@
 }
 
 .paragrafo{
-    margin: 200px;
+    margin: 300px 100px 100px 100px;
 }
 
 .container-cartao{
@@ -115,4 +115,34 @@
     color: #757575;
     margin: 0px 5vh;
 
+}
+
+.end{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    padding: 30px 40px;
+    background-color: #f5f5f5;
+    width: auto;
+    height: 250px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #757575;
+}
+
+.link{
+    text-decoration: none;
+    color: #757575;
+}
+
+.network{
+    padding-top: 30px;
+    width: 30px;
+    height: 30px;
+}
+
+.footer{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
 }
