Centralização do copyright. Adição de links nas imagens de rede sociais.

--- a/EduCodar projetos/css/style_index.css
+++ b/EduCodar projetos/css/style_index.css
@@ -143,8 +143,9 @@
     height: 30px;
 }
 
-.footer{
+footer{
     display: flex;
+    align-items: center;
     flex-direction: column;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
     font-size: 10px;
