--- a/EduCodar projetos/css/style_index.css
+++ b/EduCodar projetos/css/style_index.css
@@ -29,6 +29,12 @@
     padding-left: 60px;
     font-size: 15pt;
 }
+
+a{
+    text-decoration: none;
+    color: azure;
+}
+
 .logo{
     display: flex;
     align-content: center;
