--- a/EduCodar projetos/css/style_index.css
+++ b/EduCodar projetos/css/style_index.css
@@ -13,7 +13,7 @@
     align-items: center;
     
 }
-.menu{
+#menu{
     height: 80px;
     color: azure;
     display: flex;
@@ -29,12 +29,10 @@
     padding-left: 60px;
     font-size: 15pt;
 }
-
 a{
     text-decoration: none;
     color: azure;
 }
-
 .logo{
     display: flex;
     align-content: center;
@@ -123,10 +121,21 @@ a{
 
 }
 
+.seta{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 300px;
+
+}
+
+.seta_img{
+    width: 30px;
+    height: 35px;
+}
+
 .end{
     display: flex;
     justify-content: space-between;
-    margin-top: 300px;
     padding: 30px 40px;
     background-color: #f5f5f5;
     width: auto;
